Testando a remoção do planeta